Working version of Summit Events Registrant Map
Can be added to either the Summit Event FlexiPage or Summit Event Instance FlexiPage after activating data integration rule for the mapping data service. Details: https://help.salesforce.com/s/articleView?id=sales.ddc_data_integration_rule_activating.htm&type=5

--- a/force-app/main/default/classes/SummitEventsMapController.cls
+++ b/force-app/main/default/classes/SummitEventsMapController.cls
@@ -7,12 +7,15 @@ public with sharing class SummitEventsMapController {
 			if (Schema.SObjectType.Summit_Events_Registration__c.isAccessible()) {
 				registrations = [SELECT Id, 
 						Preferred_First_Name_Formatted__c,
-						Contact__r.MailingStreet, Contact__r.MailingCity, Contact__r.MailingState, Contact__r.MailingPostalCode, Contact__r.MailingLongitude, Contact__r.MailingLatitude
+						Contact__r.MailingStreet, 
+						Contact__r.MailingCity, 
+						Contact__r.MailingState, 
+						Contact__r.MailingPostalCode, 
+						Contact__r.MailingCountry,
+						Contact__r.MailingLongitude, 
+						Contact__r.MailingLatitude
 					FROM Summit_Events_Registration__c
-					WHERE Event_Instance__c =: eventId
-					AND Registrant_City__c != null
-					AND Registrant_State__c != null
-					AND Registrant_Zip__c != null
+					WHERE (Event_Instance__c =: eventId OR Event__c =: eventId)
 					WITH SECURITY_ENFORCED
 				];
 			}
